--- a/2023/event-info.yml
+++ b/2023/event-info.yml
@@ -1,9 +1,11 @@
 name: Wicked Woods 2023
+startDate: 6/8/2023
+endDate: 6/11/2023
 address: 3901 Kootenay Hwy, Fairmont Hot Springs, BC V0B 1L1, Canada
 timeZone: America/Denver
 imageURL: https://firebasestorage.googleapis.com:443/v0/b/festivl.appspot.com/o/userContent%2F54F37A50-9698-41B3-AF27-2BC3EE1599FD.png?alt=media&token=d8b07305-f201-4826-bb91-1f31e209741f
 siteMapImageURL: https://firebasestorage.googleapis.com:443/v0/b/festivl.appspot.com/o/userContent%2FB9AB0E38-CCCD-4A79-8E78-D971B13D1DA6.png?alt=media&token=0dabdd19-84c8-4878-9b9f-d4decc5c3d27
-contactNumber:
+contactNumbers:
 - phoneNumber: '2506884133'
   title: On Site Emergency Services
   description: This will connect you directly with our switchboard, and alert the
