--- a/fall-2022/event-info.yml
+++ b/fall-2022/event-info.yml
@@ -1,7 +1,7 @@
 name: Wicked Woods (September 2022)
-address: '3901 Kootenay Hwy, Fairmont Hot Springs, BC V0B 1L1, Canada
-
-  '
+address: '3901 Kootenay Hwy, Fairmont Hot Springs, BC V0B 1L1, Canada'
+startDate: 9/8/2022
+endDate: 9/11/2022
 timeZone: America/Denver
 imageURL: https://firebasestorage.googleapis.com:443/v0/b/festivl.appspot.com/o/userContent%2FEE6A4163-01DE-4DF4-A9B7-1AC0D8BE6EAA.png?alt=media&token=4b9951c7-bcc6-405a-ba4c-aa90ab35a98d
 siteMapImageURL: https://secureservercdn.net/198.71.233.71/88d.74e.myftpupload.com/wp-content/uploads/2022/02/Map_web_version-1244-2.png?time=1662323120
