--- a/spring-2022/event-info.yml
+++ b/spring-2022/event-info.yml
@@ -1,4 +1,6 @@
 name: Wicked Woods (May 2022)
+startDate: 5/26/2022
+endDate: 5/28/2022
 address: 3901 Kootenay Hwy, Fairmont Hot Springs, BC V0B 1L1, Canada
 timeZone: America/Denver
 imageURL: https://firebasestorage.googleapis.com:443/v0/b/festivl.appspot.com/o/userContent%2FDAA28B1F-8634-49ED-B740-435A751FAAC6.png?alt=media&token=3359edfa-99c5-4b8e-bb39-417f6ce0cfe4
