--- a/2024/event-info.yml
+++ b/2024/event-info.yml
@@ -5,8 +5,21 @@ address: 3901 Kootenay Hwy, Fairmont Hot Springs, BC V0B 1L1, Canada
 timeZone: America/Denver
 imageURL: https://firebasestorage.googleapis.com:443/v0/b/festivl.appspot.com/o/userContent%2F6D9DD348-26B0-481D-8E0B-200901A57F5A.png?alt=media&token=847204e2-2df4-49e1-ac9e-bcfc1c95835a
 siteMapImageURL: https://firebasestorage.googleapis.com/v0/b/festivl.appspot.com/o/userContent%2FPublic%20Legend%202-1%20from%20Wicked%20Woods.jpeg?alt=media&token=d09bfeee-5469-437c-afaf-3ea1eeea1db2
+
+# Contact Info
 contactNumbers:
 - phoneNumber: '2504095887'
   title: On Site Emergency Services
   description: This will connect you directly with our switchboard, and alert the
     appropriate services
+    
+# Stages
+stages:
+- name: Unicorn Lounge
+  imageURL: https://firebasestorage.googleapis.com:443/v0/b/festivl.appspot.com/o/userContent%2FF0BC110C-D42E-4CC9-BED3-59E2700938FF.png?alt=media&token=472a66e1-c45a-4a67-895a-5ec7e0ad95c0
+- name: The Hallow
+  imageURL: https://firebasestorage.googleapis.com:443/v0/b/festivl.appspot.com/o/userContent%2FB36D3658-2659-447C-9ECA-21D07C952A88.png?alt=media&token=d328c04d-6c4d-4be7-8368-786ab5262c9a
+- name: Ursus
+  imageURL: https://firebasestorage.googleapis.com:443/v0/b/festivl.appspot.com/o/userContent%2F274838AC-2BDA-40A0-8FD4-78E9FFC86D6B.png?alt=media&token=b28cc74f-b60d-4472-a31b-900a4f5bfbd8
+- name: The Portal
+  imageURL: https://firebasestorage.googleapis.com:443/v0/b/festivl.appspot.com/o/userContent%2F8BD98000-C41A-4360-8106-9AD98BF1AD71.png?alt=media&token=a0df8893-0cc7-4442-8921-d6c4e066569c
