--- a/spring-2022/schedules/2022-05-27.yml
+++ b/spring-2022/schedules/2022-05-27.yml
@@ -1,6 +1,6 @@
 date: '2022-05-27'
 performances:
-  Ursis:
+  Ursus:
   - artist: Lazy Syup Orchestra
     time: 3:00 PM
   - artist: 'Dirty Mits Mama ft. 14 Flamingos '
