--- a/spring-2022/schedules/2022-05-28.yml
+++ b/spring-2022/schedules/2022-05-28.yml
@@ -74,7 +74,7 @@ performances:
   - artist: M3Rf
     time: 11:00 AM
     endTime: 1:00 PM
-  Ursis:
+  Ursus:
   - artist: Tate & Dallas
     time: 12:00 PM
   - artist: Proof Read Dread
