--- a/spring-2022/event-info.yml
+++ b/spring-2022/event-info.yml
@@ -5,7 +5,7 @@ address: 3901 Kootenay Hwy, Fairmont Hot Springs, BC V0B 1L1, Canada
 timeZone: America/Denver
 imageURL: https://firebasestorage.googleapis.com:443/v0/b/festivl.appspot.com/o/userContent%2FDAA28B1F-8634-49ED-B740-435A751FAAC6.png?alt=media&token=3359edfa-99c5-4b8e-bb39-417f6ce0cfe4
 siteMapImageURL: https://edm.com/.image/t_share/MTg4NzQ0ODA4NzcxMTAyNDUy/festival-map-final-1300x1300.png
-contactNumber:
+contactNumbers:
 - phoneNumber: '4034931800'
   title: General Information Line
   description: For general information, questions or concerns, or to report any sanitation
